[Qt] Authentication dialog does not work https://bugs.webkit.org/show_bug.cgi?id=79738

Patch by Dinu Jacob <dinu.jacob@nokia.com> on 2012-03-07
Reviewed by Simon Hausmann.

QQuickWebView should accept touch events only if there is
no active dialog.

* UIProcess/API/qt/qquickwebview.cpp:
(QQuickWebViewPrivate::QQuickWebViewPrivate):
(QQuickWebViewPrivate::runJavaScriptAlert):
(QQuickWebViewPrivate::runJavaScriptConfirm):
(QQuickWebViewPrivate::runJavaScriptPrompt):
(QQuickWebViewPrivate::handleAuthenticationRequiredRequest):
(QQuickWebViewPrivate::handleProxyAuthenticationRequiredRequest):
(QQuickWebViewPrivate::handleCertificateVerificationRequest):
(QQuickWebView::touchEvent):
* UIProcess/API/qt/qquickwebview_p_p.h:
(QQuickWebViewPrivate):

Canonical link: https://commits.webkit.org/97712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110098 268f45cc-cd09-0410-ab3c-d52691b4dbfc